[FIX] sets init next_gen_time if its not set
This was preventing from generating recurrent calendar, because
it checked for next_gen_time before it was set. Also init field is
required if there is no next_gen_time to make sure init generation
is used first.

--- a/calendar_service/views/calendar_service_recurrent_view.xml
+++ b/calendar_service/views/calendar_service_recurrent_view.xml
@@ -104,7 +104,7 @@
                             <group>
                                 <field name="active"/>
                                 <field name="next_gen_time" attrs="{'readonly': True}"/>
-                                <field name="init"/>
+                                <field name="init" attrs="{'required': [('next_gen_time', '=', False)]}"/>
                             </group>
                         </group>
                         <group>
